Sun Jan 11 11:33:27 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (chdir): handle 5xx errors correctly.
	  backported from trunk.  fixed [ruby-core:18057].

Fri Jan  9 19:25:25 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (disconnect): do not refer SSL::SSLSocket for
	  environments without OpenSSL.  backported from trunk.
	  fixed [ruby-dev:35755].

Thu Jan  8 13:24:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (deferred_nodes, compstmt, arg, fixup_nodes, range_op): fix
	  up fixnum range literal in conditional as automagical line number
	  comparison.  [ruby-core:12124], [ruby-dev:35731]

Wed Jan  7 10:09:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (timeofday): use monotonic clock.  based on a patch
	  from zimbatm <zimbatm@oree.ch> in [ruby-core:16627].

Tue Jan  6 09:03:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (yylex): 8 and 9 in octal integer should cause compile
	  error.  [ruby-dev:35729]

Mon Jan  5 11:14:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_schedule): runs deferred finalizers.

	* gc.c (gc_sweep): sets rb_thread_pending to run deferred finalizers.

	* rubysig.h (CHECK_INTS): now checks rb_thread_pending even on
	  platforms where setitimer is not available.  [ruby-core:18045]

Mon Jan  5 11:14:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* rubysig.h (CHECK_INTS): gives the chance to perform to deferred
	  finalizers before explicit GC.start or the process termination.
	  [ruby-core:18045]

Sun Jan  4 04:49:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_telldir): just returns loc.

	* win32/win32.c (rb_w32_rewinddir): needs to intialize loc.
	  [ruby-core:18041]

Sun Jan  4 04:45:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_select): recalc the rest of timeout for each
	  iterations.  [ruby-core:18015]

Fri Jan  2 03:08:47 2009  Kouhei Sutou  <kou@cozmixng.org>
