@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2009-01-11"
+#define RUBY_RELEASE_DATE "2009-01-12"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20090111
-#define RUBY_PATCHLEVEL 82
+#define RUBY_RELEASE_CODE 20090112
+#define RUBY_PATCHLEVEL 83
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2009
 #define RUBY_RELEASE_MONTH 1
-#define RUBY_RELEASE_DAY 11
+#define RUBY_RELEASE_DAY 12
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
